force-app/main/default/objects/Lab_Order__c/Lab_Order__c.object-meta.xml
<CustomObject>
    <label>Lab Test</label>
    <nameField>
        <displayFormat>LabOrder-{0000}</displayFormat>
        <label>Order Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lab Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>