force-app/main/default/objects/Lab_Order__c/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Id</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Lab_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>