force-app/main/default/objects/Lab_Order__c/fields/Assigning_Application__c.field-meta.xml
<CustomField>
    <fullName>Assigning_Application__c</fullName>
    <label>Assigning Application</label>
    <length>255</length>
    <type>Text</type>
</CustomField>