force-app/main/default/objects/Lab_Order__c/fields/Bill_Type__c.field-meta.xml
<CustomField>
    <fullName>Bill_Type__c</fullName>
    <label>Bill Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C</fullName>
                <label>Client</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>Patient</label>
            </value>
            <value>
                <fullName>T</fullName>
                <label>Third-Party</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>