force-app/main/default/objects/Lab_Order__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Guarantor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Type__c</field>
            <operation>equals</operation>
            <value>Guarantor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Lab_Orders3</relationshipName>
    <type>Lookup</type>
</CustomField>