force-app/main/default/objects/Lab_Order__c/fields/Diagnostic_Serv_Sect_ID__c.field-meta.xml
<CustomField>
    <fullName>Diagnostic_Serv_Sect_ID__c</fullName>
    <label>Diagnostic Serv Sect ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>