force-app/main/default/objects/Lab_Order__c/fields/Doctors_Note__c.field-meta.xml
<CustomField>
    <fullName>Doctors_Note__c</fullName>
    <label>Doctors Note</label>
    <type>TextArea</type>
</CustomField>