force-app/main/default/objects/Lab_Order__c/fields/Entered_By__c.field-meta.xml
<CustomField>
    <fullName>Entered_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entered By</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Practitioner</value>
        </filterItems>
        <filterItems>
            <field>Contact.Elixir_Contact_Type__c</field>
            <operation>equals</operation>
            <value>Elixir_Practitioner_Contact</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Lab Orders (Entered By)</relationshipLabel>
    <relationshipName>Lab_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>