force-app/main/default/objects/Lab_Order__c/fields/ICD_Id__c.field-meta.xml
<CustomField>
    <fullName>ICD_Id__c</fullName>
    <label>ICD Id</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>