force-app/main/default/objects/Lab_Order__c/fields/Insurance__c.field-meta.xml
<CustomField>
    <fullName>Insurance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance</label>
    <referenceTo>VOB__c</referenceTo>
    <relationshipName>Lab_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>