force-app/main/default/objects/Lab_Order__c/fields/Lab_Id__c.field-meta.xml
<CustomField>
    <fullName>Lab_Id__c</fullName>
    <label>Lab Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>