force-app/main/default/objects/Lab_Order__c/fields/Lab_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Lab_Order_Number__c</fullName>
<description>This field is used for storing Order ID</description>
    <label>Lab Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>