force-app/main/default/objects/Lab_Order__c/fields/Lab_Order_Req__c.field-meta.xml
<CustomField>
    <fullName>Lab_Order_Req__c</fullName>
<description>This field used to store placer order number</description>
    <label>Lab Order Req</label>
    <length>255</length>
    <type>Text</type>
</CustomField>