force-app/main/default/objects/Lab_Order__c/fields/Lab_Type__c.field-meta.xml
<CustomField>
    <fullName>Lab_Type__c</fullName>
    <label>Lab Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>