force-app/main/default/objects/Lab_Order__c/fields/LabName__c.field-meta.xml
<CustomField>
    <fullName>LabName__c</fullName>
    <label>LabName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>