force-app/main/default/objects/Lab_Order__c/fields/Order_result_received__c.field-meta.xml
<CustomField>
    <fullName>Order_result_received__c</fullName>
    <label>Order result received</label>
    <type>DateTime</type>
</CustomField>