force-app/main/default/objects/Lab_Order__c/fields/OrderingProvider__c.field-meta.xml
<CustomField>
    <fullName>OrderingProvider__c</fullName>
    <label>Ordering Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>