force-app/main/default/objects/Lab_Order__c/fields/Parent_Result__c.field-meta.xml
<CustomField>
    <fullName>Parent_Result__c</fullName>
    <label>Parent Result</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>