force-app/main/default/objects/Lab_Order__c/fields/Physician_Id__c.field-meta.xml
<CustomField>
    <fullName>Physician_Id__c</fullName>
    <label>Physician Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>