force-app/main/default/objects/Lab_Order__c/fields/Physician_Name__c.field-meta.xml
<CustomField>
    <fullName>Physician_Name__c</fullName>
    <label>Physician Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>