force-app/main/default/objects/Lab_Order__c/fields/Quantity_Timing__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Timing__c</fullName>
    <label>Quantity/Timing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>