force-app/main/default/objects/Lab_Order__c/fields/Result_Profile_Code__c.field-meta.xml
<CustomField>
    <fullName>Result_Profile_Code__c</fullName>
    <label>Result Profile Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>