force-app/main/default/objects/Lab_Order__c/fields/Results_Rpt_Status_Change_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Results_Rpt_Status_Change_Date_Time__c</fullName>
    <label>Results Rpt/Status Change Date Time</label>
    <type>DateTime</type>
</CustomField>