force-app/main/default/objects/Lab_Order__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>E</fullName>
                <label>Entered</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>Transmitted</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Cancelled</label>
            </value>
            <value>
                <fullName>Results Received (Partial)</fullName>
            </value>
            <value>
                <fullName>Results Received</fullName>
            </value>
            <value>
                <fullName>Final Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>