force-app/main/default/objects/Lab_Order__c/fields/Test__c.field-meta.xml
<CustomField>
    <fullName>Test__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It is used to connect the test to the lab order.</description>
    <label>Test</label>
    <referenceTo>Test__c</referenceTo>
    <relationshipName>Lab_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>