force-app/main/default/objects/Lab_Order__c/fields/Test_Id__c.field-meta.xml
<CustomField>
    <fullName>Test_Id__c</fullName>
    <label>Test Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>