force-app/main/default/objects/Lab_Order__c/fields/Verified_By__c.field-meta.xml
<CustomField>
    <fullName>Verified_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Verified By</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Practitioner</value>
        </filterItems>
        <filterItems>
            <field>Contact.Elixir_Contact_Type__c</field>
            <operation>equals</operation>
            <value>Elixir_Practitioner_Contact</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Lab Orders (Verified By)</relationshipLabel>
    <relationshipName>Lab_Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>