force-app/main/default/objects/Lab_Order__c/recordTypes/eLab.recordType-meta.xml
<RecordType>
    <fullName>eLab</fullName>
    <active>true</active>
    <label>eLab</label>
</RecordType>