force-app/main/default/objects/Lab_Order__c/recordTypes/InHouse.recordType-meta.xml
<RecordType>
    <fullName>InHouse</fullName>
    <active>true</active>
    <label>InHouse</label>
</RecordType>