force-app/main/default/objects/Lab_Order__c/recordTypes/Manual.recordType-meta.xml
<RecordType>
    <fullName>Manual</fullName>
    <active>true</active>
    <label>Manual</label>
</RecordType>