force-app/main/default/objects/Lab_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Facility_Id__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Lab_Order_Number__c</columns>
    <columns>Lab_Type__c</columns>
    <columns>Account_Id__c</columns>
    <columns>Test_Name__c</columns>
    <columns>Lab_Order_Req__c</columns>
    <columns>LabName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>